Landing Page (only HTML)

--- a/index.html
+++ b/index.html
@@ -3,35 +3,175 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>HTML tutorial</title>
+    <title>Landing page</title>
+    <link rel="shortcut icon" href="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/655ab414147335.5627e6fa5d403.jpg" type="images/x-icon">
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <div>
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio non quos, repudiandae libero provident dicta quas neque reiciendis quibusdam pariatur iusto! Delectus quidem magni, sed facere animi molestias! Inventore, est.
-            Sit temporibus, modi, dicta voluptatibus dignissimos amet enim minus aspernatur qui unde odit praesentium delectus ratione quidem a vitae! Aliquam debitis molestias atque blanditiis explicabo nesciunt dolores perspiciatis est sed.
-            Nam aperiam fugit, iure ducimus incidunt dignissimos quisquam asperiores perferendis a dolores quo reiciendis nihil quas doloremque quaerat quae in assumenda saepe nisi esse? Vel magni autem cum atque totam.
-            Deserunt eaque blanditiis nemo mollitia voluptas, animi doloremque quam asperiores. Corporis molestias repellendus, iste voluptatem nisi animi maxime, earum commodi itaque recusandae soluta tempora quia quis dolorum hic ullam molestiae?
-            Asperiores quia excepturi iure voluptates modi amet iste tempora libero consequuntur ut fugit, quis reprehenderit fugiat ab doloremque id cum sed laudantium beatae quaerat suscipit deleniti nam quasi harum! Deserunt.
-            Odio fugiat saepe voluptatem minima recusandae veritatis nisi laudantium enim beatae aperiam quae voluptas optio numquam laboriosam, tempore dicta corporis sunt mollitia quaerat ad nam dolores aliquam inventore? Suscipit, rerum.
-            Labore, iste. Quasi facere molestiae nihil voluptatibus magnam perferendis tempora labore. Doloremque, debitis ipsa atque minima dolore eius nam non, consequuntur aliquam fugiat quibusdam modi repellat nesciunt. Laborum, dolorem. Dolorem?
-            Obcaecati et, aperiam, laudantium itaque omnis dicta consectetur id nulla non eligendi vero porro enim minima inventore quisquam. Magni animi voluptates tempora placeat iusto odit quia nostrum ut ratione incidunt.
-            Velit quas earum eaque iste obcaecati voluptates sint ex mollitia, repudiandae neque repellendus quam quasi, odio quis molestiae pariatur exercitationem sequi nobis ipsum placeat! Reprehenderit ut doloribus error ducimus odit.
-            Assumenda et distinctio vel aliquid incidunt minima earum quod alias animi, culpa quo officia doloremque quas nam in sint autem ab nesciunt labore deserunt. Blanditiis enim soluta totam dolor error!
-        </p>
+<header>
+    <div class="wrapper">
+        <nav>
+            <div class="logo">Guvi.</div>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Our Work</a></li>
+                <li><a href="#" class="btn dark">Enrol Now</a></li>
+            </ul>
+            <div class="hero section"></div>
+            <div class="left">
+                <h1>Learn the art of<br>
+                    Web Dev</h1>
+                    <p>
+                        This is a comprehensive course on Game Development. <br>
+                        You will learn everything from generating an idea to <br>
+                        publishing your games to different platforms.
+                    </p>
+                    <a href="#" class="btn light enrol-icon">Enrol Now</a>
+            </div>
+            <div class="right"></div>
+            <img src="Assets/hero-image 1.png" alt="hero-image">
+        </nav>
     </div>
-    <div>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus nihil temporibus nobis, ex, illo vitae optio possimus, ad nulla soluta consequuntur quae alias. Placeat iste soluta exercitationem nihil labore nobis.
-            Temporibus quis dolorum corporis autem labore pariatur iusto tenetur porro, neque dicta eligendi voluptatum dignissimos atque qui voluptas aspernatur doloremque sed maiores quae in. Cumque temporibus magnam quisquam deleniti debitis!
-            Quia laudantium ipsam nobis voluptatem architecto. Eligendi quibusdam dolore, pariatur, asperiores dolorum aspernatur eveniet sapiente alias necessitatibus voluptatem qui nisi ad animi quidem. Voluptates praesentium natus qui laborum possimus eveniet!
-            Odit officiis ab asperiores totam earum voluptatum harum provident aliquam, impedit similique cum eos porro officia aut tenetur beatae quaerat pariatur nemo consequuntur explicabo ullam expedita accusantium est fugiat. Blanditiis.
-            Quasi aliquid, mollitia porro dolor qui dicta sunt corporis distinctio totam perspiciatis numquam, maxime autem beatae. Sint error optio officia. At vitae explicabo nihil nesciunt quod, quam recusandae ipsa optio?
-        </p>
+    <div class="achievment-cards">
+        <div class="achievment-card students-enrolled">
+            <div class="content">
+                <div>
+                    <h3>32K</h3>
+                </div>
+                <p>Students enroled</p>
+            </div>
+            <div class="bg"></div>
+        </div>
+        <div class="achievment-card students-enrolled">
+            <div class="content">
+                <div>
+                    <h3>4.7</h3>
+                    <img src="Assets/emojione_star.svg" alt="star">
+                </div>
+                <p>Overall Rating</p>
+            </div>
+            <div class="bg"></div>
+        </div>
     </div>
-    <div>
-        <a href="forms.html">html forms</a>
+</header>
+<section class="testimonial section">
+    <div class="left">
+        <div class="testimonial-card1">
+            <div class="content">
+                <p>This is a great course. It helped me a lot. <br>
+                    Thank you :)</p>
+            </div>
+            <div class="info">
+                <h4>Jane Cooper</h4>
+                <p class="company">Developer, Sony</p>
+            </div>
+            <img src="Assets/Ellipse 1.png" alt="lady 1">
+        </div>
+        <div class="testimonial-card2">
+            <div class="content">
+                <p>Amazing Work! Well done!</p>
+            </div>
+            <div class="info">
+                <h4>Jacob Jones</h4>
+                <p class="company">Designer, Facebook</p>
+            </div>
+            <img src="Assets/Ellipse 2.png" alt="male 1">
+        </div>
     </div>
+        <div class="right">
+            <h2 class="review">What our students<br/>say</h2>
+            <p class="review">All students get access to all the videos and also the source code of 
+                the projects.</p>
+               <p> You will also have access to a private Discord channel where you can 
+                discuss your doubts.</p>
+                <a href="#" class="btn light orange-btn">Learn More</a>
+        </div>
+</section>
+<section class="courses-section">
+    <div class="wrapper">
+        <h2 class="light">Our Courses</h2>
+        <div class="course-cards">
+            <div class="course-card1">
+                <img src="Assets/Rectangle 7.png" alt="course-image1">
+                <div class="info">
+                    <h3>Game Design Essentials</h3>
+                    <div class="duration">8 Hrs</div>
+                </div>
+            </div>
+            <div class="course-card2">
+                <img src="Assets/Rectangle 8.png" alt="course-image2">
+                <div class="info">
+                    <h3>Unity Game Engine Fundamentals</h3>
+                    <div class="duration">8 Hrs</div>
+                    <a href="#" class="btn light">All Courses</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="app-section">
+    <h2>Get Our App</h2>
+    <p>You can use our App for better experience on smartphones</p>
+    <div class="app-buttons">
+        <div class="app-btn1">
+            <img src="Assets/Vector.svg" alt="appstore">
+            <span>App Store</span>
+        </div>
+        <div class="app-btn2">
+            <img src="Assets/Group 8.svg" alt="playstore">
+            <span>Google Play</span>
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="wrapper">
+        <div class="link-container">
+            <div class="links">
+                <h4>Quick links</h4>
+                <ul>
+                    <li><a href="#"></a>About Us</li>
+                    <li><a href="#"></a>Contact Us</li>
+                    <li><a href="#"></a>Privacy Policy</li>
+                    <li><a href="#"></a>Terms & Conditions</li>
+                </ul>
+            </div>
+            <div class="links">
+                <h4>Courses</h4>
+                <ul>
+                    <li><a href="#"></a>Log in</li>
+                    <li><a href="#"></a>Download</li>
+                    <li><a href="#"></a>All Courses</li>
+                </ul>
+            </div>
+            <div class="links">
+                <h4>Contact Us</h4>
+                <ul>
+                    <li><a href="#"></a>contact@email.com</li>
+                </ul>
+            </div>
+            <div class="social">
+                <a href="#">
+                    <img src="Assets/Vector3.svg" alt="Facebook">
+                </a>
+                <a href="#">
+                    <img src="Assets/Vector2.svg" alt="Instagram">
+                </a>
+            </div>
+            <div>
+                <form action="#">
+                    <input type="text" placeholder="Email Address">
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+        </div>
+        <p class="copyrighta">This website is developed by GTCoding © 2021</p>
+    </div>
+</footer>
 </body>
 </html>
